--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.4.2",
     "@types/css-tree": "^2.3.10",
-    "@types/node": "^20",
+    "@types/node": "20.19.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/sanitize-html": "^2.16.0",
@@ -71,7 +71,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9.29.0",
     "eslint-config-next": "^15.3.3",
-    "eslint-plugin-next": "^0.0.0",
+    "@next/eslint-plugin-next": "^15.3.3",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-security": "^3.0.1",
     "husky": "^9.1.7",
@@ -81,7 +81,10 @@
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.12",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "5.9.2"
+  },
+  "overrides": {
+    "tmp": "0.2.5"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
